openmediavault (6.7.0-1) stable; urgency=low

  * Various improvements.
  * Display correct size of Btrfs file systems.
  * Improve calculation of CPU utilization.
  * Issue #1576: Getting rid of `@angular/flex-layout`.
  * Issue #1584: omv-btrfs-dfree doesn't report the correct size.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 19 Aug 2023 14:32:14 +0200

openmediavault (6.6.0-2) stable; urgency=low

  * Various improvements.
  * Do not forward error to UI from SMART device enumeration.
  * Fix bug in NFS configuration.
  * Limit width of page body to 1920px. The page content will be
    centered for greater browser window sizes.
  * Issue #1579: Add NetBIOS knob to SMB settings. This replaces
    the `OMV_SAMBA_NMBD_ENABLE` environment variable. Enable this
    to add support for name resolution and network discovery of
    legacy systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Aug 2023 21:57:35 +0200

openmediavault (6.5.7-1) stable; urgency=low

  * Various improvements.
  * Remove useless Salt state `omv.setup.resolvconf`.
  * Fix bug in NFS configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Aug 2023 16:52:37 +0200

openmediavault (6.5.6-1) stable; urgency=low

  * Fix public key error in APT.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 06 Aug 2023 17:24:53 +0200

openmediavault (6.5.5-1) stable; urgency=low

  * Issue #1572: Set `shadow:localtime = no` in smb.conf because
    several users reported that `Previous Versions` is not working
    in Windows. Note, Windows will display `Date modified` in UTC,
    but this is the compromise to get the them displayed at all.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 01 Aug 2023 20:06:33 +0200

openmediavault (6.5.4-1) stable; urgency=low

  * Various improvements.
  * Enhance cleanup after removing plugins.
  * Issue #1569: Shared folder references are not correctly queried.
